--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,1 +1,48 @@
-<p>layout-page works!</p>
+<mat-sidenav-container fullscreen>
+
+    <!-- SIDENAV -->
+    <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px' }">
+
+        <mat-toolbar color="warn">
+
+            <span>Menú</span>
+            <span class="spacer">Menú</span>
+
+            <button mat-icon-button (click)="sidenav.toggle()">
+                <mat-icon>menu</mat-icon>
+            </button>
+
+        </mat-toolbar>
+
+        <mat-nav-list>
+            <mat-list-item *ngFor="let item of sidebarItems"
+            [routerLink]="item.url"
+            (click)="sidenav.toggle()" >
+                <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+                {{ item.label }}
+            </mat-list-item>
+        </mat-nav-list>
+
+    </mat-sidenav>
+
+    <!-- TOOLBAR -->
+    <mat-toolbar color="primary">
+        <button mat-icon-button (click)="sidenav.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <span class="spacer"></span>
+
+        <button mat-button>
+            <mat-icon>logout</mat-icon>
+            Logout
+        </button>
+
+    </mat-toolbar>
+
+    <!-- CONTAINER -->
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+
+</mat-sidenav-container>
