Autocomplete de Angular Material

--- a/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -32,7 +32,8 @@
             </mat-list>
 
             <button mat-button color="warn" (click)="goBack()">
-                Volver</button>
+                Volver
+            </button>
         </mat-card-content>
 
     </mat-card>
