--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -27,6 +27,11 @@
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
+                        <mat-label>Personajes</mat-label>
+                        <input type="text" matInput required>
+                    </mat-form-field>
+
+                    <mat-form-field class="col-12">
                         <mat-label>Creador</mat-label>
                         <mat-select required>
                             <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">
