--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -51,6 +51,7 @@
 
                 <div class="flex justify-content-between">
                     <button *ngIf="currentHero.id"
+                            (click)="onDeleteHero()"
                             mat-flat-button color="warn">
                         Borrar
                     </button>
