--- a/src/app/heroes/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/heroes/components/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>¿Está seguro?</h1>
 <div mat-dialog-content>
-    <p>Este proceso no es reversible, está a punto de eliminiar a HEROE</p>
+    <p>Este proceso no es reversible, está a punto de eliminiar a {{ data.superhero }}</p>
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
