--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -33,7 +33,9 @@
 
         <span class="spacer"></span>
 
-        <button mat-button>
+        <span>{{user?.user}}</span>
+
+        <button mat-button (click)="onLogout()">
             <mat-icon>logout</mat-icon>
             Logout
         </button>
